application.properties finalized

--- a/onlinetest/src/main/resources/application.properties
+++ b/onlinetest/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/onlinetest
+spring.datasource.username=root
+spring.datasource.password=Password0*
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#We should use the correct version MySQL Dialect here to get it work
+#spring.jpa.hibernate.ddl-auto=update #Not required necessarily
